--- a/.github/workflows/review.yml
+++ b/.github/workflows/review.yml
@@ -15,3 +15,4 @@ jobs:
         uses: actions/dependency-review-action@bug-with-build
         with:
           fail-on-severity: high
+          comment-summary-in-pr: on-failure
