--- a/.github/workflows/review.yml
+++ b/.github/workflows/review.yml
@@ -12,7 +12,7 @@ jobs:
       - name: 'Checkout Repository'
         uses: actions/checkout@v4
       - name: 'Dependency Review'
-        uses: actions/dependency-review-action@bug-with-build
+        uses: actions/dependency-review-action@bug-with-comments
         with:
           fail-on-severity: high
           comment-summary-in-pr: on-failure
